<resources>
    <string name="facebook_app_id" translatable="false">489363285223363</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb489363285223363</string>
    <string name="app_name">Wego</string>
    <string name="app_name_lowcase">wego</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_next">"Next"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_hint_password">Password</string>
    <string name="title_activity_maps2" translatable="false">Map</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_navigation" translatable="false">Map</string>
    <string name="place_api_key" translatable="false">AIzaSyBC8ugpOmCpMNUwUv7S82wuBYgzjSlOoxY</string>
    <string name="action_sign_in_now">Login now</string>
    <string name="hint_phone">Enter your phone number</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_phone">Login with phone</string>
    <string name="text_choose_photo">Choose photo</string>
    <string name="text_choose_from_gallery">Choose a photo from gallery</string>
    <string name="text_take_photo">Take a photo</string>
    <string name="file_name_image" translatable="false">avatar.jpg</string>
    <string name="text_my_account">My account</string>
    <string name="text_null" translatable="false" />
    <string name="date_format" translatable="false">yyyyMMddHHmmss</string>
    <string name="or_login_with">or login with</string>
    <string name="username">Email</string>
    <string name="text_invalid_email">Invalid email</string>
    <string name="text_user_not_found">User does not exist</string>
    <string name="text_wrong_password">Wrong password</string>
    <string name="text_login_fail">Login fail, check your connection</string>
    <string name="text_name">Name</string>
    <string name="text_phone">Phone number</string>
    <string name="text_save_uc">SAVE</string>
    <string name="text_join">JOIN</string>
    <string name="text_create">Create</string>
    <string name="text_all">All</string>
    <string name="text_title">Title</string>
    <string name="text_note">Note</string>
    <string name="text_name_hint">Name...</string>
    <string name="text_destination">Destination</string>
    <string name="text_some_places">Some places</string>
    <string name="text_done">Done</string>
    <string name="text_enter_trip_code">Enter trip code</string>
    <string name="text_i_m_out">I\'m out</string>
    <string name="text_trip_id_to_invite_your_friends">Trip ID to invite your friends</string>
    <string name="text_phone_number_verification">PHONE NUMBER VERIFICATION</string>
    <string name="text_enter_code_here">Enter code here</string>
    <string name="text_please_enter_the_verification_code_received_by_sms">Please enter the verification code received by SMS.</string>
    <string name="text_if_you_did_not_receive_the_verification_code">If you did not receive the verification code</string>
    <string name="text_resend_code">Resend code</string>
    <string name="text_sign_in_with_phone">Sign in with phone number</string>
    <string name="text_verify">Verify</string>
    <string name="text_map">Map</string>
    <string name="text_friends">Friends</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_message_password">Password should be at least 6 characters</string>
    <string name="text_email_badly_formatted">The email address is badly formatted</string>
    <string name="text_sign_up_fail">Sign up failure. Check your connection</string>
    <string name="text_something_went_wrong">Something went wrong</string>
    <string name="text_id_trip_error">ID trip invalid, try again</string>
    <string name="text_success">Success</string>
    <string name="text_join_a_trip">Join a trip</string>
    <string name="text_create_new_trip">Create new trip</string>
    <string name="text_invite_friends">Invite your friends</string>
    <string name="text_click_back_again">Please click BACK again to exit</string>
    <string name="action_direction">Direction</string>
    <string name="action_call">Call</string>
    <string name="text_create_new_event">Create new event</string>
    <string name="text_add_a_photo">Add a photo</string>
    <string name="text_photos">Photos</string>
    <string name="text_noti_need_help">needs help!</string>
    <string name="text_other_event">Other</string>
    <string name="text_out_of_gas">Out of gas</string>
    <string name="text_car_broken">Car broken</string>
    <string name="text_add_an_event">Add an event</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_waiting">Waiting</string>
    <string name="text_days">days,</string>
    <string name="text_hours">hours,</string>
    <string name="text_minutes">minutes ago</string>
    <string name="text_me">Me</string>
    <string name="text_undone">Undone</string>
    <string name="text_expand_to_show">Expand to show!</string>
    <string name="text_noti_done">DONE!</string>
    <string name="text_noti_cancel">CANCEL</string>
    <string name="text_i_m_waiting">I\'m waiting</string>
    <string name="text_i_m_coming">I\'m coming</string>
    <string name="text_friends_coming">friends are coming</string>
    <string name="event_has_finished">This event has finished</string>
    <string name="you_are_coming">You are coming</string>
    <string name="you_and">You and</string>
    <string name="members_are_coming">members are coming</string>
    <string name="you_are_waiting">You are waiting</string>
    <string name="member_are_waiting">members are waiting</string>
    <string name="unknown_place">Unknown place</string>
    <string name="now_online">Now online</string>
    <string name="going_to">Going to</string>
    <string name="s_place">\'s place</string>
    <string name="waiting_for">"Waiting for "</string>
    <string name="and">and</string>
    <string name="other_event">other event</string>
    <string name="no_event_yet">No event yet!</string>
    <string name="title_alert">Confirm</string>
    <string name="message_alert">You are attending another event, do you want to change?</string>
    <string name="text_ok">Yes</string>
    <string name="people_who_coming">People who coming</string>
    <string name="people_who_waiting">People who waiting</string>
    <string name="welcome">"Welcome, "</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_friends">Friends</string>
    <string name="sent_message_error">Message has not been sent</string>
    <string name="you">You</string>
    <string name="reply_label">Reply</string>
    <string name="type_to_repley">Type to reply...</string>
    <string name="message_label">Message</string>
    <string name="group_label">Group</string>
    <string name="friend_label">Friends</string>
    <string name="enter_your_friend_name">Enter your friend name...</string>
    <string name="check_your_connection">Search fail, check your connection</string>
    <string name="no_user_found">No user found</string>
    <string name="add_friend">Add friend</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="unfriend">Unfriend</string>
    <string name="invite_code">Invite code</string>
    <string name="settings">Settings</string>
    <string name="time_to_repeat_minutes">Time to repeat (minutes)</string>
    <string name="min_distance">Min distance (m)</string>
    <string name="notification_for_min_distance">Notification for min distance</string>
    <string name="caution">CAUTION!</string>
    <string name="caution_distance_me">You are going slower than people. Go faster so you don\'t get lost.</string>
    <string name="caution_distance_other">is going slower than people</string>
    <string name="trip_name">Trip name</string>
    <string name="route">Route</string>
    <string name="add_waypoint">+ Add waypoint</string>
    <string name="direction_api_key" translatable="false">AIzaSyCfigxwS6gPrQUWn43WYq2269GuYRv3T2k</string>
    <string name="choose_the_destination_first">You must choose the destination first</string>
    <string name="add_waypoint_title">Add waypoint</string>
    <string name="search_place_here">Search place here...</string>
    <string name="starting_point">Starting point</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="type">Place type</string>
    <string name="waypoint">Waypoint</string>
    <string name="check_in">Check-in</string>
    <string name="added_waypoint">Added a waypoint</string>
    <string name="end_point">End point</string>
    <string name="message_alert_save_changes">Are you want to save changes?</string>
    <string name="message_alert_delete_location">Are you want to delete this location?</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invite">Invite</string>
    <string name="joined">Joined</string>
    <string name="action_join">JOIN</string>
    <string name="action_deny">DENY</string>
    <string name="text_intvite_you_to_join">invited you to join</string>
    <string name="please_enter_phone_number">Please enter your phone number!</string>
    <string name="phone_is_valid">Phone number is invalid</string>
    <string name="sms_qouta">SMS quota has been exceeded</string>
    <string name="check_connection">Check internet connection and try again</string>
    <string name="login_phone_error">Login with phone number error. Try again.</string>
    <string name="invalid_code">Invalid verify code</string>
    <string name="login_fail">Login failed</string>
    <string name="authen_fail">Authentication failed</string>
    <string name="direction_api_key_ver2" translatable="false">AIzaSyBkrblFbEPs0h9HmkIC2CHcy7HSurPAVKk</string>
    <string name="copied">Copied</string>
    <string name="to_clipboard">to clipboard</string>
    <string name="missing_info">Missing information</string>
    <string name="unnamed_road">Unnamed Road</string>
    <string name="have_not_choose_destination">You haven\'t choose the destination</string>
    <string name="error_when_load_friend">Error when load friends</string>
</resources>
