<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.register.RegisterActivity">

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="@dimen/text_login_width"
        android:layout_height="@dimen/text_login_height"
        android:layout_marginStart="@dimen/margin_vertical_default"
        android:layout_marginLeft="@dimen/margin_vertical_default"
        android:layout_marginEnd="@dimen/margin_vertical_default"
        android:layout_marginRight="@dimen/margin_vertical_default"
        android:layout_marginBottom="364dp"
        android:background="@drawable/button_primary"
        android:text="@string/text_sign_up"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="@dimen/text_login_width"
        android:layout_height="@dimen/text_login_height"
        android:layout_marginStart="@dimen/margin_vertical_default"
        android:layout_marginLeft="@dimen/margin_vertical_default"
        android:layout_marginTop="@dimen/margin_vertical_default"
        android:layout_marginEnd="@dimen/margin_vertical_default"
        android:layout_marginRight="@dimen/margin_vertical_default"
        android:layout_marginBottom="@dimen/margin_vertical_default"
        android:background="@drawable/text_login"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingHorizontal="@dimen/text_login_padding"
        app:layout_constraintBottom_toTopOf="@+id/text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="@dimen/text_login_width"
        android:layout_height="@dimen/text_login_height"
        android:layout_marginStart="@dimen/margin_vertical_default"
        android:layout_marginLeft="@dimen/margin_vertical_default"
        android:layout_marginTop="@dimen/margin_vertical_default"
        android:layout_marginEnd="@dimen/margin_vertical_default"
        android:layout_marginRight="@dimen/margin_vertical_default"
        android:background="@drawable/text_login"
        android:ems="10"
        android:hint="@string/text_hint_password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/text_login_padding"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="#FFF" />
</androidx.constraintlayout.widget.ConstraintLayout>